# jobs

./: .gitattributes  .gitignore  .vercelignore  404.html  CHANGELOG.md  CNAME  Design.md  LICENSE  README.ja.md  README.md  about.html  astro.config.mjs  compliance.html  data.json  image-sitemap.xml  index.html  llms-full.txt  llms.txt  map.html  og-card.html  package-lock.json  package.json  privacy.html  prompt.en.md  prompt.ja.md  pyproject.toml  robots.txt  sitemap.xml  tsconfig.json  vercel.json
analytics/: README.md  funnel-reference.md  oauth-init.mjs  package-lock.json  package.json  setup-ga4.mjs  spec.yaml
api/: feedback.js  og.tsx  subscribe.js
data/: .ipd_provenance.json  .stats_legacy_provenance.json  ai_scores_2026-04-25.json  translations_2026-04-25.json
docs/: DATA_ARCHITECTURE.md  Design-Mobile.md  Design.md  MOBILE_DESIGN.md
en/: 1.html  10.html  100.html  101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  11.html  110.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  12.html  120.html  121.html  122.html  123.html  124.html  125.html  126.html  127.html  128.html  129.html  13.html  130.html  131.html  132.html  133.html  134.html  (+516 more)
ja/: 1.html  10.html  100.html  101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  11.html  110.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  12.html  120.html  121.html  122.html  123.html  124.html  125.html  126.html  127.html  128.html  (+523 more)
(+3577 files in other folders)
