[project]
name = "jp-jobs"
version = "0.0.1"
description = "Japan jobs x AI replacement risk - bilingual visualization (JA/EN)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "jasonhnd" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
    "playwright>=1.50",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://jasonhnd.github.io/jobs/"
Repository = "https://github.com/jasonhnd/jobs"
Changelog = "https://github.com/jasonhnd/jobs/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
