[project]
name = "jp-jobs"
version = "0.0.1"
description = "Japan jobs x AI replacement risk - visualization of 552 occupations from MHLW jobtag"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "jasonhnd" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
    "openpyxl>=3.1",
    "playwright>=1.50",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://mirai-shigoto.com/"
Repository = "https://github.com/jasonhnd/jobs"
Changelog = "https://github.com/jasonhnd/jobs/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = []
